--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
 		<!-- Adapt this to a version found on http://central.maven.org/maven2/org/eclipse/jetty/jetty-maven-plugin/ -->
 		<jettyVersion>9.3.7.v20160115</jettyVersion>
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
+        <flyway.version>5.0.7</flyway.version>
+        <mysql.driver.version>8.0.11</mysql.driver.version>
+        <database.driver>com.mysql.cj.jdbc.Driver</database.driver>
+        <database.url>jdbc:mysql://192.168.1.35:3306/equipamento?serverTimezone=UTC</database.url>
+        <database.username>andre</database.username>
+        <database.password>1234</database.password>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -30,16 +36,20 @@
 			<artifactId>jetty-server</artifactId>
 			<version>${jettyVersion}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.11</version>
-		</dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>${flyway.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.driver.version}</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
-			  <plugin>
+			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>${jettyVersion}</version>
@@ -48,6 +58,7 @@
 					<webApp>
 						<contextPath>/topicos</contextPath>
 					</webApp>
+					<stopPort>8181</stopPort>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -59,6 +70,34 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>${flyway.version}</version>
+                <configuration>
+                    <driver>${database.driver}</driver>
+                    <url>${database.url}</url>
+                    <user>${database.username}</user>
+                    <password>${database.password}</password>
+                    <schemas>
+                        <schema>equipamento</schema>
+                    </schemas>
+                    <encoding>ISO-8859-1</encoding>
+                    <cleanOnValidationError>true</cleanOnValidationError>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flyway database migration</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>clean</goal>
+                            <goal>baseline</goal>
+                            <goal>migrate</goal>
+                            <goal>info</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 		<finalName>topicos</finalName>
 	</build>
