--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,3 @@
-name: Fortify on Demand Scan
-  # You may pin to the exact commit or the version.
-  # uses: fortify/gha-setup-fod-uploader@636f3c3a14aec1747eec5242a02c6349e4f3cce6
-  uses: fortify/gha-setup-fod-uploader@v1.0.1
-  with:
-    # FoDUploader version to use
-    version: # default is latest
-
 # This is a basic workflow to help you get started with Actions
 
 name: CI
@@ -42,3 +34,12 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      
+      - name: Fortify on Demand Scan
+        # You may pin to the exact commit or the version.
+        # uses: fortify/gha-setup-fod-uploader@636f3c3a14aec1747eec5242a02c6349e4f3cce6
+        uses: fortify/gha-setup-fod-uploader@v1.0.1
+        with:
+          # FoDUploader version to use
+          version: default
+
