--- a/.github/workflows/fod.yml
+++ b/.github/workflows/fod.yml
@@ -19,31 +19,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      
-      # Prepare source+dependencies for upload.
-      - name: Download Fortify ScanCentral Client
-        uses: fortify/gha-setup-scancentral-client@v1
-      - name: Package Code + Dependencies
-        run: scancentral package $PACKAGE_OPTS -o package.zip
-        env:
-          PACKAGE_OPTS: "-bt none"
-      
-      # Inicia o upload do código empacotado para o Fortify On Demand
-      - name: Download Fortify on Demand Universal CI Tool
-        uses: fortify/gha-setup-fod-uploader@v1
-      - name: Perform SAST Scan
-        run: java -jar $FOD_UPLOAD_JAR -z package.zip -aurl $FOD_API_URL -purl $FOD_URL -rid "$FOD_RELEASE_ID" -tc "$FOD_TENANT" -ac "$FOD_KEY" "$FOD_SECRET" $FOD_UPLOADER_OPTS -n "$FOD_UPLOADER_NOTES"
-        env:
-          FOD_UPLOAD_JAR: fod/FodUpload.jar
-          FOD_TENANT: ${{ secrets.FOD_TENANT }}  
-          FOD_KEY: "f3087e07-3a09-4b2b-8e0a-889c06f4def8"
-          FOD_SECRET: "RW9lM0JVRE1kb1F1SVVSeWQ5VTAnWk0iQjVBKGs10"
-          FOD_RELEASE_ID: ${{ secrets.FOD_RELEASE_ID }}
-          FOD_URL: "https://ams.fortify.com/"
-          FOD_API_URL: "https://api.ams.fortify.com/"
-          FOD_UPLOADER_OPTS: "-ep 1 -pp 0 -I 1 -apf"
-          FOD_UPLOADER_NOTES: 'Triggered by GitHub Actions (${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})'
-      
+
       # Quando o scan concluir será gerado um arquivo SARIF output que traz as informações da análise para dentro do GitHub.
       - name: Download Results
         uses: fortify/gha-export-vulnerabilities@v1
@@ -51,7 +27,7 @@ jobs:
           fod_base_url: https://ams.fortify.com
           fod_client_id: "cacb10a2-21b4-49bf-a8ea-f4f2d7aa72b2"
           fod_client_secret: "VVktNS5Sbm41V0Q3NlVrS2d5S2R6ZSp5VXhYMnlN0"
-          fod_release_id: ${{ secrets.FOD_RELEASE_ID }}
+          fod_release_id: 305329
       
       # Import Fortify on Demand results to GitHub Security Code Scanning
       - name: Import Results
